[project]
name = "geobin-writer"
version = "0.1.0"
description = "A geospatial binary writer package"
authors = [
    { name = "Vincent Bonillo", email = "contact@jllspear.com" }
]
readme = "README.md"
requires-python = "==3.13"
license = { text = "MIT" }

dependencies = [
    "sqlmodel>=0.0.27",
    "position_writer@git+https://github.com/jllspear/position-writer.git"
]

[project.urls]
Homepage = "https://github.com/jllspear/geobin-writer"
Repository = "https://github.com/jllspear/geobin-writer"

[tool.uv]
dev-dependencies = [
    "ruff>=0.14.7",
]